--- a/doc/main.tex
+++ b/doc/main.tex
@@ -38,7 +38,7 @@
 
 % Sections formatting
 \titleformat{\section}{
-  \vspace{-10pt}\scshape\raggedright\large
+  \vspace{-5pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-6pt}]
 
 %-------------------------
@@ -80,28 +80,12 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\LARGE Jonah Fritz}} &\href{https://jonah.tech}{https://jonah.tech} \cdot \href{mailto:}{jonahfritz@outlook.com} \cdot \href{https://www.linkedin.com/in/jonah-fritz}{linkedin.com/in/jonah-fritz}\\
+  \textbf{{\Huge Jonah Fritz}} &\href{https://jonah.tech}{https://jonah.tech} \cdot \href{mailto://jonahfritz@outlook.com}{jonahfritz@outlook.com} \cdot \href{https://www.linkedin.com/in/jonah-fritz}{linkedin.com/in/jonah-fritz}\\
 \end{tabular*}
+\vspace{10pt}
 
-%-----------EDUCATION-----------------
-\section{~~Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Rochester Institute of Technology}{Rochester, NY}
-      {B.S. - Software Engineering;  GPA: 3.62}{Aug 2017 - May 2022}
-      {\scriptsize \textit{ \footnotesize{\newline{}\textbf{Minor:} Philosophy \textbf{Honors:} Magna Cum Laude}}}
-    \resumeSubHeadingListEnd
-	    
-\vspace{-5pt}
-\section{Skills and Tools}
-	\resumeSubHeadingListStart
-	\resumeSubItem{Languages}{~~~~~~Java, Python, JavaScript, C\#, SQL, Bicep}
-	\resumeSubItem{Frameworks and Libraries}{~~~~~~~~React, Spring Boot, AngularJS, Expo, Django, Guice, React Native, .NET}
-	\resumeSubItem{Platforms and Databases}{~~~~~~~AWS, Azure, Heroku, IBM Cloud, PostgreSQL, Cosmos DB, MongoDB}
-
-\resumeSubHeadingListEnd
-\vspace{-5pt}
-\section{Professional Experience}
+%-------------EXPERIENCE------
+\section{~~Professional Experience}
   \resumeSubHeadingListStart
     \resumeSubheading{Microsoft}{Redmond, WA}
     {Software Engineer - MyWorkspace}{Jun 2022 - Present}
@@ -148,9 +132,28 @@ Python and shell scripting to tie together Jenkins, Ansible, and Slack API}
               {Implemented new features including integrations with external point of sale and accounting
 systems and improvements to electronic invoice processing}
 		\resumeItemListEnd
-
-
 \resumeSubHeadingListEnd
+
+
+%-----------EDUCATION-----------------
+\section{~~Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Rochester Institute of Technology}{Rochester, NY}
+      {B.S. - Software Engineering;  GPA: 3.62}{Aug 2017 - May 2022}
+      {\scriptsize \textit{ \footnotesize{\newline{}\textbf{Minor:} Philosophy \textbf{Honors:} Magna Cum Laude}}}
+    \resumeSubHeadingListEnd
+\vspace{-5pt}
+
+%--------SKILLS----------------
+\section{~~Skills and Tools}
+	\resumeSubHeadingListStart
+	\resumeSubItem{Languages}{~~~~~~Java, Python, JavaScript, C\#, SQL, Bicep}
+	\resumeSubItem{Frameworks and Libraries}{~~~~~~~~React, Spring Boot, AngularJS, Expo, Django, Guice, React Native, .NET}
+	\resumeSubItem{Platforms and Databases}{~~~~~~~AWS, Azure, Heroku, IBM Cloud, PostgreSQL, Cosmos DB, MongoDB}
+\resumeSubHeadingListEnd
+\vspace{-5pt}
+
 
 %-----------PROJECTS-----------------
 \vspace{-5pt}
@@ -162,8 +165,9 @@ systems and improvements to electronic invoice processing}
 \vspace{2pt}
 \resumeSubHeadingListEnd
 \vspace{-5pt}
-
 \vspace{-5pt}
+
+%-------------------EXTRACURRICULARS-------
 \section{Extracurricular Activities}
   \resumeSubHeadingListStart
         \resumeSubItem{Computer Science House}{A living-learning community filled with RIT students passionate about computing. Every year, each active member
