--- a/doc/main.tex
+++ b/doc/main.tex
@@ -90,10 +90,10 @@
     \resumeSubheading{Microsoft}{Redmond, WA}
     {Software Engineer - MyWorkspace}{Jun 2022 - Present}
     \resumeItemListStart
-        \resumeItemWithoutTitle{}{Developed software using C\#, .NET 6, and React}
-        \resumeItemWithoutTitle{}{Implemented automated workflow for deploying new firewalls to customer Azure subscriptions}
+        \resumeItemWithoutTitle{}{Helped design and implement new infrastructure provisioning and management service using C\#, .NET 7, and Azure}
+        \resumeItemWithoutTitle{}{Designed and implemented workflow for automated deployment of network topologies to customer Azure subscriptions}
         \resumeItemWithoutTitle{}{Automated creation of DNS records for firewall hub networks end-to-end}
-        \resumeItemWithoutTitle{}{Modified message-based batch job orchestrator to deploy containers behind existing subnet for enhanced security using Bicep templates}
+        \resumeItemWithoutTitle{}{Developed batch-based system for giving customers time-restricted access to compute and network resources behind Azure Firewalls and Application Gateways}
       \resumeItemListEnd
 \vspace{-5pt}
     \resumeSubheading
